[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Samuel Lima <osamuellimaesilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.0"}
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
